fix header layout on mobile

--- a/frontend/src/scenes/dashboard/DashboardHeader.scss
+++ b/frontend/src/scenes/dashboard/DashboardHeader.scss
@@ -6,26 +6,37 @@
     margin-bottom: 2rem;
 
     --dashboard-title-size: 32px;
+    width: 100%;
 
     &.full-screen {
         margin-top: 1rem;
     }
 
-    .ant-select-single {
-        line-height: var(--dashboard-title-size);
-        .ant-select-selector {
-            padding-left: 0;
-            padding-right: 15px;
+    .dashboard-select {
+        flex: 1;
+        overflow: hidden;
+        .ant-select-single {
+            max-width: 100%;
             line-height: var(--dashboard-title-size);
-            height: var(--dashboard-title-size);
-            .ant-select-selection-item {
-                font-size: var(--dashboard-title-size);
+
+            .ant-select-selector {
+                padding-left: 0;
+                padding-right: 15px;
                 line-height: var(--dashboard-title-size);
-                overflow: visible;
+                height: var(--dashboard-title-size);
+
+                .ant-select-selection-item {
+                    font-size: var(--dashboard-title-size);
+                    line-height: var(--dashboard-title-size);
+                    width: 100%;
+                    overflow: hidden;
+                    text-overflow: ellipsis;
+                }
             }
         }
     }
     .dashboard-meta {
+        white-space: nowrap;
         .ant-btn {
             .anticon {
                 vertical-align: baseline;
